# img-face-cluster

./: .gitignore  base_config.py  detection.py  image.py  main.py  pyproject.toml  recognition.py  scanner.py  setup.py
face_cluster/: preprocess.py
img_face_cluster/detector/: __init__.py
img_face_cluster/manager/: __init__.py  cache.py  manager.py  models.py  storage.py
img_face_cluster/processor/: __init__.py  detector.py  encoder.py
img_face_cluster/provider/: __init__.py  provider.py
img_face_sorter/: detection.py  image.py  manager.py  recognition.py  scanner.py
